Делает базовую стилизацию

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,44 @@
-// Начните писать стили здесь
+// Базовые стили
+@use "./base/fonts.scss";
+@use "./base/base.scss";
+
+// Блоки компонентов
+@use "./blocks/container.scss";
+@use "./blocks/title.scss";
+@use "./blocks/description.scss";
+@use "./blocks/button.scss";
+
+// Header
+@use "./blocks/header/logo.scss";
+@use "./blocks/header/main-navigation.scss";
+
+// Main
+@use "./blocks/main/main-container-inner.scss";
+@use "./blocks/main/hero-header.scss";
+
+// Index
+@use "./blocks/main/index/advantages.scss";
+@use "./blocks/main/index/addition-list.scss";
+@use "./blocks/main/index/search.scss";
+@use "./blocks/main/index/map.scss";
+
+// Catalog
+@use "./blocks/main/catalog/gallery-photo.scss";
+@use "./blocks/main/catalog/button-like.scss";
+@use "./blocks/main/catalog/gallery-video.scss";
+
+// Form
+@use "./blocks/main/form/feedback.scss";
+@use "./blocks/main/form/form.scss";
+@use "./blocks/main/form/form-field.scss";
+@use "./blocks/main/form/input.scss";
+@use "./blocks/main/form/form-control.scss";
+
+// Footer
+@use "./blocks/footer/socials-list.scss";
+@use "./blocks/footer/develop.scss";
+@use "./blocks/footer/main-footer.scss";
+
+// Modal
+@use "./blocks/modal/modal-container.scss";
+@use "./blocks/modal/modal-content.scss";
