--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,4 +1,8 @@
+@use "./variables.scss";
+
 .container {
-  width: 320px;
+  width: 100%;
+  max-width: variables.$desktop-width;
+  min-height: 100%;
   margin: 0 auto;
 }
