--- a/source/sass/blocks/footer/develop.scss
+++ b/source/sass/blocks/footer/develop.scss
@@ -1,8 +1,11 @@
 .develop {
   display: inline-flex;
-  justify-content: space-between;
   align-items: center;
   max-width: 100%;
   text-decoration: none;
   color: #000000;
+}
+
+.develop__text {
+  margin-right: 12px;
 }
