--- a/source/sass/blocks/main/catalog/button-like.scss
+++ b/source/sass/blocks/main/catalog/button-like.scss
@@ -1,6 +1,7 @@
+@use "./variables.scss";
+
 .button-like {
   display: inline-block;
-  max-width: 100%;
   padding: 0;
   font-family: inherit;
   font-style: normal;
@@ -13,4 +14,8 @@
   background-color: transparent;
   transition: all 0.3s linear;
   cursor: pointer;
+
+  @media (min-width: variables.$desktop-width) {
+    color: #ffffff;
+  }
 }
