--- a/source/sass/blocks/main/catalog/gallery-photo.scss
+++ b/source/sass/blocks/main/catalog/gallery-photo.scss
@@ -1,33 +1,113 @@
+@use "./variables.scss";
+
+.gallery-photo {
+  width: 100%;
+}
+
 .gallery-photo__list {
   padding: 0;
   margin: 0;
   list-style-type: none;
+
+  @media (min-width: variables.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-flow: dense;
+    width: calc(100% - 120px);
+    margin: 0 auto;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+  }
 }
 
 .gallery-photo__item {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 24px 20px 25px 20px;
   border-top: solid 1px #e5e5e5;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 0;
+    border: none;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    position: relative;
+  }
+}
+
+.gallery-photo__item:first-child {
+  @media (min-width: variables.$tablet-width) {
+    grid-column: span 2;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    grid-column: span 3;
+  }
 }
 
 .gallery-photo__item:last-child {
   border-bottom: solid 1px #e5e5e5;
+
+  @media (min-width: variables.$tablet-width) {
+    border: none;
+  }
+}
+
+.gallery-photo__info-wrapper {
+  @media (min-width: variables.$tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 22px 20px 15px 20px;
+    background-color: #f2f2f2;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.gallery-photo__text-wrapper {
+  margin-bottom: 11px;
+
+  @media (min-width: variables.$tablet-width) {
+    width: 70%;
+    margin-bottom: 0;
+  }
 }
 
 .gallery-photo__title {
   font-size: 14px;
   line-height: 21px;
   text-align: start;
+
+  @media (min-width: variables.$desktop-width) {
+    color: #ffffff;
+  }
 }
 
 .gallery-photo__author {
   margin: 0;
-  margin-bottom: 13px;
 }
 
 .gallery-photo__image {
+  display: block;
   order: -1;
+  width: auto;
   margin-bottom: 13px;
+  object-fit: cover;
+
+  @media (min-width: variables.$tablet-width) {
+    margin: 0;
+  }
 }
