--- a/source/sass/blocks/main/form/form.scss
+++ b/source/sass/blocks/main/form/form.scss
@@ -1,17 +1,75 @@
+@use "./variables.scss";
+
 .form {
-  border-top: solid 1px #e5e5e5;
+  @media (max-width: variables.$mobile-width-only) {
+    border-top: solid 1px #e5e5e5;
+  }
 }
 
 .form__group {
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
   padding: 0 20px 24px 20px;
   border: none;
-  border-bottom: solid 1px #e5e5e5;
+
+  @media (max-width: variables.$mobile-width-only) {
+    border-bottom: solid 1px #e5e5e5;
+  }
+
+  @media (min-width: variables.$tablet-width) {
+    max-width: 688px;
+    padding-bottom: 45px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    max-width: 1000px;
+    padding-bottom: 56px;
+  }
+}
+
+.form__groups-wrapper {
+  @media (min-width: variables.$tablet-width) {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    gap: 58px;
+    max-width: 728px;
+    margin: 0 auto;
+    padding: 40px 40px 63px 40px;
+
+    &::after {
+      position: absolute;
+      content: "";
+      width: 1px;
+      height: calc(100% - 103px);
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #dbdbdb;
+    }
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    gap: 100px;
+    max-width: 1040px;
+    padding-top: 0;
+    padding-bottom: 71px;
+
+    &::after {
+      top: 0;
+      height: calc(100% - 71px);
+    }
+  }
 }
 
 .form__group--name,
 .form__group--contacts {
   padding: 0 20px 37px 20px;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 0;
+  }
 }
 
 .form__group-title {
@@ -19,6 +77,11 @@
   padding: 0;
   padding-top: 24px;
   margin-bottom: 20px;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 0;
+    margin-bottom: 28px;
+  }
 }
 
 .form__field-list,
@@ -32,18 +95,53 @@
 }
 
 .form__field-wrapper {
+  width: 100%;
   padding: 24px 20px 0 20px;
-  margin-bottom: 56px;
+  margin: 0 auto 56px auto;
+
+  @media (min-width: variables.$tablet-width) {
+    max-width: 688px;
+    margin-bottom: 47px;
+    padding-top: 0;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    max-width: 1000px;
+  }
 }
 
 .form__button-wrapper {
+  width: 100%;
   padding: 0 20px;
   text-align: end;
+
+  @media (min-width: variables.$tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 688px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    max-width: 808px;
+  }
 }
 
 .form__button {
   min-width: 280px;
   margin-bottom: 3px;
+
+  @media (min-width: variables.$tablet-width) {
+    min-width: 324px;
+    max-width: 60%;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    min-width: 384px;
+  }
 }
 
 .form__comment {
@@ -51,4 +149,9 @@
   font-size: 12px;
   text-transform: uppercase;
   color: rgba(51, 51, 51, 0.6);
+
+  @media (min-width: variables.$tablet-width) {
+    max-width: 35%;
+    font-size: 14px;
+  }
 }
