--- a/source/sass/blocks/main/index/advantages.scss
+++ b/source/sass/blocks/main/index/advantages.scss
@@ -1,53 +1,132 @@
+@use "./variables.scss";
+
 .advantages {
-  padding-top: 32px;
+  width: 100%;
 }
 
 .advantages__wrapper {
   position: relative;
-  padding: 0 18px 16px 18px;
+  width: calc(100% - 46px);
+  padding-top: 32px;
+  padding-bottom: 16px;
+  margin: 0 auto;
 
   &::after {
     content: "";
     position: absolute;
-    width: 100%;
+    width: calc(100% + 46px);
     height: 37px;
     background-image: url("../img/advantages-divider.svg");
     background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: bottom;
-    left: 0;
-    top: 100%;
+    background-size: cover;
+    background-position: center bottom;
+    left: -23px;
+    bottom: -37px;
+  }
+
+  @media (min-width: variables.$tablet-width) {
+    &::after {
+      content: none;
+    }
+
+    max-width: 520px;
+    padding-top: 48px;
+    padding-bottom: 56px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    max-width: 487px;
+    padding-top: 59px;
+    padding-bottom: 44px;
   }
 }
 
 .advantages__wrapper .advantages__description {
   margin-bottom: 35px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .advantages__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: variables.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .advantages__item {
   padding: 24px 18px;
   background-color: #eeeeee;
   text-align: center;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 41px 33px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 52px 50px;
+  }
 }
 
 .advantages__item--image {
   padding: 0;
   background-color: #81b3d2;
+
+  @media (min-width: variables.$tablet-width) {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    grid-column: 1/4;
+  }
 }
 
 .advantages__item--tavern {
   padding-top: 37px;
+
+  @media (min-width: variables.$tablet-width) {
+    grid-row: 1/3;
+    padding-top: 0;
+  }
+}
+
+.advantages__image-wrapper {
+  @media (min-width: variables.$tablet-width) {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.advantages__item--bridge-devil {
+  @media (min-width: variables.$tablet-width) {
+    grid-row: 3/4;
+  }
 }
 
 .advantages__text-wrapper {
   padding: 37px 18px;
   color: #ffffff;
+
+  @media (min-width: variables.$tablet-width) {
+    width: 33.3%;
+    padding: 52px 23px 31px 23px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 52px 50px;
+  }
+}
+
+.advantages__item--bridge-devil .advantages__text-wrapper {
+  @media (min-width: variables.$tablet-width) and (max-width: 1199px) {
+    padding: 52px 29px 31px 29px;
+  }
 }
 
 .advantages__text-wrapper .advantages__title {
@@ -61,10 +140,32 @@
 .advantages__number {
   display: block;
   margin-bottom: 17px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .advantages__image {
   display: block;
   object-fit: cover;
-  height: auto;
+  min-height: 100%;
+
+  @media (min-width: variables.$tablet-width) {
+    flex-shrink: 0;
+    width: 66.7%;
+  }
+}
+
+.advantages__addition-list {
+  @media (min-width: variables.$tablet-width) {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+}
+
+.advantages__item--bridge-devil .advantages__image {
+  @media (min-width: variables.$tablet-width) {
+    order: -1;
+  }
 }
