--- a/source/sass/blocks/main/catalog/video.scss
+++ b/source/sass/blocks/main/catalog/video.scss
@@ -13,6 +13,19 @@
   display: block;
   text-decoration: none;
   color: #000000;
+  transition: all 0.3s;
+
+  @media (min-width: variables.$tablet-width) {
+    &:hover {
+      outline: 2px solid #0fa5f0;
+    }
+  }
+
+  &:active {
+    opacity: variables.$opacity-active;
+    outline: 2px solid #0fa5f0;
+    transition-duration: 0.1s;
+  }
 }
 
 .video__link-image {
@@ -23,6 +36,7 @@
 
 .video__button {
   position: absolute;
+  z-index: 1;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
