--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,7 @@
 @use "./blocks/main/catalog/button-like.scss";
 @use "./blocks/main/catalog/gallery-video.scss";
 @use "./blocks/main/catalog/video.scss";
+@use "./blocks/main/catalog/button-play.scss";
 
 // Form
 @use "./blocks/main/form/feedback.scss";
