--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,13 @@ $opacity-hover: 0.6;
 $opacity-active: 0.3;
 $bg-hover: #669ec0;
 $bg-active: #5496bd;
-$bg-disabled: #e5e5e5;
+$btn-bg-disabled: #e5e5e5;
 $text-color-hover: #81b3d2;
 $text-color-active: #b3b3b3;
-$text-color-disabled: #ffffff;
+$btn-text-color-disabled: #ffffff;
+$outline-focus: auto;
+$input-label-opacity-disabled: 0.4;
+$input-bg-hover: #e5e5e5;
+$input-control-bg-active: #d5d5d5;
+$input-field-bg-active: #ffffff;
+$input-field-border-color-active: #e5e5e5;
