--- a/source/sass/blocks/footer/develop.scss
+++ b/source/sass/blocks/footer/develop.scss
@@ -1,11 +1,29 @@
+@use "./variables.scss";
+
 .develop {
   display: inline-flex;
   align-items: center;
   max-width: 100%;
   text-decoration: none;
   color: #000000;
+  transition: all 0.3s;
+
+  @media (min-width: variables.$tablet-width) {
+    &:hover {
+      color: variables.$text-color-hover;
+    }
+  }
+
+  &:active {
+    color: variables.$text-color-active;
+    transition-duration: 0.1s;
+  }
 }
 
 .develop__text {
   margin-right: 12px;
+}
+
+.develop__icon-logo-htmlacademy {
+  flex-shrink: 0;
 }
