--- a/source/sass/blocks/main/catalog/button-like.scss
+++ b/source/sass/blocks/main/catalog/button-like.scss
@@ -1,8 +1,9 @@
 @use "./variables.scss";
 
 .button-like {
+  position: relative;
   display: inline-block;
-  padding: 0;
+  padding: 3px 2px 2px 42px;
   font-family: inherit;
   font-style: normal;
   font-weight: 700;
@@ -11,11 +12,68 @@
   text-transform: uppercase;
   color: #000000;
   border: none;
+  border-radius: 4px;
   background-color: transparent;
-  transition: all 0.3s linear;
+  appearance: none;
+  transition: all 0.3s;
   cursor: pointer;
+
+  &::before {
+    position: absolute;
+    left: 5px;
+    bottom: 4px;
+    content: "";
+    width: 23px;
+    height: 21px;
+    mask-image: url("../img/icon/like.svg");
+    -webkit-mask-image: url("../img/icon/like.svg");
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-size: 23px 21px;
+    -webkit-mask-size: 23px 21px;
+    mask-position: center;
+    -webkit-mask-position: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all 0.3s;
+  }
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 3px 2px 2px 37px;
+
+    &:hover {
+      box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.3);
+    }
+  }
+
+  &:active {
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.1s;
+  }
+
+  &:active::before {
+    background-color: #000000;
+    transition-duration: 0.1s;
+  }
 
   @media (min-width: variables.$desktop-width) {
     color: #ffffff;
+
+    &::before {
+      background-color: #ffffff;
+    }
+
+    &:hover {
+      box-shadow: 2px 2px 6px 2px rgba(255, 255, 255, 0.8);
+    }
+
+    &:active {
+      box-shadow: 2px 2px 4px 2px rgba(255, 255, 255, 0.7);
+      transition-duration: 0.1s;
+    }
+
+    &:active::before {
+      background-color: rgba(255, 255, 255, 0.4);
+      transition-duration: 0.1s;
+    }
   }
 }
