--- a/source/sass/blocks/main/catalog/gallery-photo.scss
+++ b/source/sass/blocks/main/catalog/gallery-photo.scss
@@ -68,6 +68,7 @@
   }
 
   @media (min-width: variables.$desktop-width) {
+    z-index: 2;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -78,7 +79,7 @@
 }
 
 .gallery-photo__text-wrapper {
-  margin-bottom: 11px;
+  margin-bottom: 13px;
 
   @media (min-width: variables.$tablet-width) {
     width: 70%;
@@ -100,14 +101,47 @@
   margin: 0;
 }
 
-.gallery-photo__image {
-  display: block;
+.gallery-photo__link {
   order: -1;
-  width: auto;
   margin-bottom: 13px;
-  object-fit: cover;
+  text-align: center;
+  color: #000000;
+  text-underline-offset: 4px;
+  transition: all 0.3s;
 
   @media (min-width: variables.$tablet-width) {
     margin: 0;
+
+    &:hover {
+      z-index: 1;
+      outline: 2px solid #0fa5f0;
+    }
   }
+
+  &:focus-visible {
+    z-index: 1;
+    outline: variables.$outline-focus;
+    transition-duration: 0s;
+  }
+
+  @supports not selector(:focus-visible) {
+    &:focus {
+      z-index: 1;
+      outline: variables.$outline-focus;
+      transition-duration: 0s;
+    }
+  }
+
+  &:active {
+    z-index: 1;
+    opacity: variables.$opacity-active;
+    outline: 2px solid #0fa5f0;
+    transition-duration: 0.1s;
+  }
+}
+
+.gallery-photo__link-image {
+  display: block;
+  width: 100%;
+  object-fit: cover;
 }
