--- a/source/sass/blocks/main/form/input.scss
+++ b/source/sass/blocks/main/form/input.scss
@@ -1,6 +1,6 @@
 .input {
-  padding: 16px 16px;
-  border: none;
+  padding: 12px 12px;
+  border: 4px solid transparent;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -16,6 +16,10 @@
 
 .input--textarea {
   height: 100%;
-  margin: 0;
   resize: none;
+}
+
+// Ошибка ввода или не указаны данные
+.input--error {
+  outline: 2px solid #ff6347;
 }
