--- a/source/sass/blocks/main/hero-header.scss
+++ b/source/sass/blocks/main/hero-header.scss
@@ -1,25 +1,59 @@
 @use "./variables.scss";
 
 .hero-header {
+  position: relative;
   width: 100%;
   min-height: 389px;
-  padding-top: 90px;
+  padding: 90px 15px 30px 15px;
   background-color: #b3d5ea;
   color: #333333;
-  background-image: url("../img/welcome-background.jpg");
+  background-image: url("../img/welcome-background-mobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center bottom;
+  background-position: left top 30%;
+
+  &::before {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 57px;
+    background-image: url("../img/icon/intro-triangle.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/welcome-background-mobile@2x.jpg");
+  }
 
   @media (min-width: variables.$tablet-width) {
     min-height: 518px;
     padding-top: 78px;
+    padding-bottom: 60px;
+    background-image: url("../img/welcome-background-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/welcome-background-tablet@2x.jpg");
+    }
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-image: url("../img/welcome-background-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/welcome-background-desktop@2x.jpg");
+    }
   }
 }
 
 .hero-header--inner {
   min-height: 158px;
   padding-top: 52px;
+  background-position: left bottom;
 
   @media (min-width: variables.$tablet-width) {
     min-height: 290px;
@@ -35,4 +69,16 @@
 .hero-header__image {
   display: block;
   margin: 0 auto;
+
+  @media (min-width: variables.$tablet-width) {
+    &--welcome {
+      width: 460px;
+      height: 350px;
+    }
+
+    &--sedona {
+      width: 460px;
+      height: 80px;
+    }
+  }
 }
