--- a/source/sass/blocks/main/index/addition-list.scss
+++ b/source/sass/blocks/main/index/addition-list.scss
@@ -4,8 +4,8 @@
   display: grid;
   gap: 25px;
   width: 100%;
-  margin: 0;
   padding: 23px 18px 46px 18px;
+  margin: 0;
   list-style-type: none;
   background-color: #ffffff;
 
@@ -17,11 +17,9 @@
 }
 
 .addition-list__item {
+  padding-left: 47px;
+
   @media (min-width: variables.$tablet-width) {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    min-height: 330px;
     padding: 60px 33px;
   }
 
@@ -30,12 +28,75 @@
   }
 }
 
+.addition-list__item--housing {
+  background-image: url("../img/icon/housing.svg");
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  background-position: left 0 top 0;
+
+  @media (min-width: variables.$tablet-width) {
+    background-size: 77px 72px;
+    background-position: left 50% top 60px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-size: 80px 72px;
+    background-position: left 50% top 69px;
+  }
+}
+
+.addition-list__item--food {
+  background-image: url("../img/icon/food.svg");
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  background-position: left 0 top 0;
+
+  @media (min-width: variables.$tablet-width) {
+    background-size: 81px 68px;
+    background-position: left 50% top 62px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-size: 74px 68px;
+    background-position: left 50% top 72px;
+  }
+}
+
+.addition-list__item--souvenirs {
+  background-image: url("../img/icon/souvenirs.svg");
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  background-position: left 0 top 0;
+
+  @media (min-width: variables.$tablet-width) {
+    background-size: 67px 75px;
+    background-position: left 50% top 64px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    background-size: 78px 75px;
+    background-position: left 50% top 69px;
+  }
+}
+
+.addition-list__text-wrapper {
+  margin-top: 8px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-top: 98px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-top: 100px;
+  }
+}
+
 .addition-list__title {
   margin-bottom: 16px;
   text-align: left;
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     text-align: center;
   }
 }
