--- a/source/sass/blocks/main/index/advantages.scss
+++ b/source/sass/blocks/main/index/advantages.scss
@@ -12,11 +12,12 @@
   margin: 0 auto;
 
   &::after {
-    content: "";
     position: absolute;
+    z-index: 1;
+    content: "";
     width: calc(100% + 46px);
     height: 37px;
-    background-image: url("../img/advantages-divider.svg");
+    background-image: url("../img/icon/advantages-divider.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center bottom;
@@ -61,16 +62,42 @@
 }
 
 .advantages__item {
-  padding: 24px 18px;
+  position: relative;
+  padding: 24px 36px 25px 36px;
   background-color: #eeeeee;
   text-align: center;
 
+  &:not(.advantages__item--image)::before {
+    position: absolute;
+    z-index: 1;
+    content: "";
+    left: 18px;
+    top: calc(100% - 1px);
+    width: calc(100% - 36px);
+    height: 1px;
+    background-color: #d6d6d6;
+  }
+
+  &:last-child:not(.advantages__item--image)::before {
+    content: none;
+  }
+
   @media (min-width: variables.$tablet-width) {
     padding: 41px 33px;
+
+    &:not(.advantages__item--image)::before {
+      content: none;
+    }
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 52px 50px;
+    padding: 51.5px 50px;
+  }
+}
+
+@media (max-width: variables.$mobile-width-only) {
+  .advantages__item:last-child {
+    padding-bottom: 30px;
   }
 }
 
@@ -95,10 +122,9 @@
   }
 }
 
-.advantages__image-wrapper {
+.advantages__photo-wrapper {
   @media (min-width: variables.$tablet-width) {
     display: flex;
-    align-items: center;
     width: 100%;
   }
 }
@@ -114,18 +140,22 @@
   color: #ffffff;
 
   @media (min-width: variables.$tablet-width) {
-    width: 33.3%;
-    padding: 52px 23px 31px 23px;
+    width: 33.33%;
+    padding: 52px 23px 30px 23px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 52px 50px;
+    padding: 51.5px 50px;
   }
 }
 
 .advantages__item--bridge-devil .advantages__text-wrapper {
-  @media (min-width: variables.$tablet-width) and (max-width: 1199px) {
-    padding: 52px 29px 31px 29px;
+  @media (min-width: variables.$tablet-width) {
+    padding: 52px 29px 30px 29px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 51.5px 90px;
   }
 }
 
@@ -135,6 +165,10 @@
 
 .advantages__title {
   margin-bottom: 11px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 13px;
+  }
 }
 
 .advantages__number {
@@ -142,19 +176,22 @@
   margin-bottom: 17px;
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+  }
+}
+
+.advantages__image-wrapper {
+  @media (min-width: variables.$tablet-width) {
+    flex-shrink: 0;
+    width: 66.67%;
   }
 }
 
 .advantages__image {
   display: block;
-  object-fit: cover;
+  width: 100%;
   min-height: 100%;
-
-  @media (min-width: variables.$tablet-width) {
-    flex-shrink: 0;
-    width: 66.7%;
-  }
+  object-fit: cover;
 }
 
 .advantages__addition-list {
