--- a/source/sass/blocks/main/index/map.scss
+++ b/source/sass/blocks/main/index/map.scss
@@ -1,3 +1,30 @@
-.map__image {
+.map {
+  position: relative;
+  width: 100%;
+  min-height: 350px;
+  background-image: url("../img/map.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "";
+    width: 27px;
+    height: 27px;
+    border: 5px solid #ffffff;
+    border-radius: 50%;
+    background-color: #81b3d3;
+  }
+}
+
+.map__image-iframe {
+  position: relative;
+  z-index: 1;
   display: block;
+  width: 100%;
+  border: none;
 }
