--- a/source/sass/blocks/modal/modal-container.scss
+++ b/source/sass/blocks/modal/modal-container.scss
@@ -47,7 +47,7 @@
 
 .modal-container__close-button {
   align-self: center;
-  margin-bottom: 35px;
+  margin: 0 35px 35px 35px;
 
   @media (max-width: variables.$mobile-width-only) {
     font-size: 18px;
@@ -97,7 +97,7 @@
 
 .modal-container__message--success .modal-container__close-button {
   min-width: 280px;
-  margin-bottom: 0;
+  margin: 0;
 
   @media (min-width: variables.$tablet-width) {
     min-width: 458px;
